--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,16 @@ dependencies:
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.6.7
   flutter_dotenv: ^5.2.1
+  image_picker: ^1.1.2
+  camera: ^0.11.1
+  permission_handler: ^12.0.0+1
+  path: ^1.8.3
+  record: ^6.0.0  # For recording audio
+  audioplayers: ^6.4.0
+  geolocator: ^14.0.0
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  geocoding: ^3.0.0
 
   
 
