--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
   geocoding: ^3.0.0
+  cloudinary_public: ^0.23.1
+  http: ^1.3.0
+  cached_network_image: ^3.4.1
 
   
 
